# whilly-orchestrator

./: .dockerignore  .env.example  .env.worker.example  .gitignore  .importlinter  .whilly_project_sync_state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO-CHECKLIST.md  DEMO.en.md  DEMO.md  Dockerfile  Dockerfile.demo  Dockerfile.funnel  HANDOFF_GITHUB_PROJECTS.md  LICENSE  Makefile  PYPI_RELEASE_NOTES.md  README-RU.md  README.md  UPLOAD_TO_PYPI.md  WORKSHOP.md  __init__.py  agent_runner.py  alembic.ini  config.py  continue_e2e.py  dashboard.py  decomposer.py  docker-compose.control-plane.yml  docker-compose.demo.yml  docker-compose.worker.yml  docker-compose.yml  progress.txt  pyproject.toml  ralph.py  ralph.sh  recovery_integration.patch  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml  release.yml  semantic-drift.yml  whilly-bot.yml
.planning/: E15-E17-auth-security-design.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP-ANALYSIS.md  ROADMAP.md  SESSION-HANDOFF-2026-05-18.md  SESSION-HANDOFF-2026-05-19.md  SESSION-HANDOFF-2026-05-21.md  SESSION-HANDOFF-2026-05-22.md  STATE.md  config.json  featgitcom_tasks.json  featprdtas_tasks.json  post-auth-hardening-tasks.json  refactoring-1_tasks.json  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v4-1_tasks.json  wui-multi-plan_tasks.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-RETROSPECTIVE.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-RETROSPECTIVE.md  v1.4-ROADMAP.md  v1.4-SUMMARY.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/reports/: whilly_summary_20260420_050018.md  (+1 more)
.whilly/: workflow.json
config/: integrations.example.json  integrations.json  prd_wizard_prompt.md
docker/: alembic.prod.ini  cli_adapter.py  control_plane.py  entrypoint.sh  llm_resource_picker.py  llm_shim.py
docs/: Agent-Local-Whilly-Setup.md  CODEX-MISSION.md  Cert-Renewal.md  Continuing-On-Another-Machine.md  Current-vs-Target.md  Deploy-M2.md  Distributed-Setup.md  EXTERNAL_INTEGRATIONS.md  Getting-Started.md  GitHub-Integration-Guide.md  GitHub-Projects-Status-Workflow.md  LLM-OPS.md  OpenCode-Developer-Guide.md  PRD-featgitcom.md  PRD-featprdtas.md  PRD-jira-scheduler-integration.md  PRD-post-auth-hardening.md  PRD-refactoring-1.md  PRD-task-105-cleanup-legacy.md  PRD-v41-claude-proxy.md  PRD-v41-prd-wizard-port.md  PRD-workshop.md  PRD-wui-multi-plan.md  Project-Config.md  Project-Description-v3.md  Project-Description.md  Ralph-Interfaces-and-Tasks.md  Ralph-Usage.md  Resource-Protection.md  SCHEDULER.md  Self-Healing-Guide.md  Token-Rotation.md  Whilly-Claude-Proxy-Guide.md  Whilly-Init-Guide.md  Whilly-Interfaces-and-Tasks.md  Whilly-Usage.md  Whilly-Workstation-Bootstrap.md  Whilly-v4-Architecture.md  Whilly-v4-Migration-from-v3.md  Whilly-v4-Worker-Protocol.md  (+10 more)
examples/: github_projects_sync_example.py  project-config-etl.toml  project-config-graphql.toml
openspec/: AUTHORING.md  COVERAGE-MATRIX.md  FORWARD-PROCESS.md  TAXONOMY.md  config.yaml  project.md
ralph/: __main__.py  agent_runner.py  cli.py  config.py  dashboard.py  history.py  notifications.py  orchestrator.py  prd_generator.py  prd_launcher.py  prd_wizard.py  reporter.py  state_store.py  tmux_runner.py  triz_analyzer.py  verifier.py  web_status.py  worktree_runner.py
scripts/: audit-coverage-matrix.py  check_demo_tasks_terminal.sh  check_status_sync.py  claude-wrapper.sh  db-up.sh  m1_baseline_fixtures.py  m2_cross_host_demo.sh  move_project_card.py  populate_board.py  release-template.md  run-v4-refactor.sh  semantic_drift_check.py  setup-hooks.sh  sync-to-anvils.sh  sync_task_status.py  sync_workshop_docs.sh  v6-baseline-vps-doctor.sh  whilly-auto-loop.sh  whilly-auto-reset.sh  whilly-auto.sh  whilly-proxy-preflight.sh  whilly_ci.py  whilly_e2e_demo.py  whilly_e2e_triz_prd.py  whilly_with_healing.py
tests/: conftest.py  test_acceptance_demo.py  test_agent_backend_claude.py  test_agent_backend_opencode.py  test_agent_backend_wiring.py  test_anonymizer_integration.py  test_auth_matrix.py  test_classifier.py  test_claude_anonymizer.py  test_claude_handoff.py  test_config_layered.py  test_config_sections.py  test_decision_gate.py  test_doctor.py  test_documentation_flow.py  test_epic_inferrer.py  test_from_issue.py  test_github_issues_source.py  test_github_pr_sink.py  test_github_projects.py  test_hierarchy_base.py  test_hierarchy_github.py  test_jira_full_cycle.py  test_log_viewer.py  test_magic_link_reuse.py  test_mcp_profiles.py  test_migration_018_smoke.py  test_notifications_per_task.py  test_operator_snapshot_codec.py  test_operator_snapshot_endpoint.py  test_plans_crud.py  test_project_board.py  test_project_map.py  test_quality_gate.py  test_ralph_budget_deadlock.py  test_ralph_dashboard.py  test_ralph_decomposer.py  test_ralph_error_handling.py  test_ralph_headless.py  test_ralph_state_store.py  (+27 more)
whilly/: __init__.py  __main__.py  agent_runner.py  cli.py  config.py  config_sections.py  dashboard.py  decision_gate.py  decomposer.py  doctor.py  external_integrations.py  feedback.py  gh_utils.py  github_converter.py  github_interactive.py  github_pr.py  github_projects.py  history.py  jira_board.py  jira_watch.py  jira_work.py  llm_ops.py  llm_otel.py  log_viewer.py  notifications.py  operator_snapshot_codec.py  operator_views.py  orchestrator.py  pause_control.py  prd_generator.py  prd_launcher.py  prd_wizard.py  project_board.py  recovery.py  reporter.py  resource_monitor.py  secrets.py  self_healing.py  slack_task_notify.py  state_store.py  (+8 more)
whilly_logs/: whilly_events.jsonl
whilly_worker/: README.md  pyproject.toml
(+866 files in other folders)
