[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whilly-orchestrator"
version = "3.1.0"
description = "Whilly Wiggum loop — Ralph's smarter brother technique for continuous AI agent loops: TRIZ analyzer, Decision Gate, PRD wizard, Rich TUI dashboard, tmux/git-worktree parallelism, self-healing system"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mikhail Shchegolev", email = "mshegolev@gmail.com" }]
license = { text = "MIT" }
keywords = ["whilly", "whilly-wiggum", "llm", "orchestrator", "agent-loop", "claude", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",           # System resource monitoring
    "platformdirs>=4.0",       # OS-native user config / data directories
    "tomli>=2.0; python_version<'3.11'",  # TOML parsing on 3.10 (stdlib tomllib on 3.11+)
    "keyring>=24.0",           # OS secret store (macOS Keychain / libsecret / Windows Credential Manager)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.11.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://mshegolev.github.io/whilly-orchestrator/"
Documentation = "https://mshegolev.github.io/whilly-orchestrator/"
Repository = "https://github.com/mshegolev/whilly-orchestrator"
Issues = "https://github.com/mshegolev/whilly-orchestrator/issues"
Changelog = "https://github.com/mshegolev/whilly-orchestrator/blob/main/CHANGELOG.md"

[project.scripts]
whilly = "whilly.cli:main"

[tool.setuptools.packages.find]
include = ["whilly", "whilly.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
whilly = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
